--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TwitterApp</title>
+    <title>My Twitter</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+  <% if flash[:notice] %>
+       <div class="alert alert-info" role="alert"> 
+         <p class="notice"> <%= notice %> </p>
+       </div>
+     <% end %>
+     <% if flash[:alert] %>
+       <div class="alert alert-danger" role="alert">
+         <p class="alert"> <%= alert %> </p>
+       </div>
+     <% end %>
     <%= yield %>
   </body>
 </html>
