--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <div class="row">
-<div class="col-8">
+<div class="col-md-8">
     <article class="media">
     <figure class="media-left">
  	    <p class="img-thumbnail">
