--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,34 +1,41 @@
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-8">
+<% if user_signed_in? %>
     <article class="media">
     <figure class="media-left">
- 	    <p class="img-thumbnail">
-        <%= gravatar_image_tag('junk', :alt => 'Github Default Gravatar', :gravatar => { :default => 'https://assets.github.com/images/gravatars/gravatar-140.png' }) %>
+ 	<p class="img-thumbnail">
+        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
  		</p>
     </figure>
         <div class="media-body">
  			<%= render 'posts/form' %>
         </div>
  	</article>
-    </div>   
- <div class="col-4">
- <% @posts.each do | post | %>
-    <div class="box panel, panel default">
+    <% end %>  
+<% @posts.each do | post | %>
+    <div>
         <article class="media">
             <div class="media-left">
                 <figure class="img-thumbnail">
-                    <%= gravatar_image_tag('junk', :alt => 'Github Default Gravatar', :gravatar => { :default => 'https://assets.github.com/images/gravatars/gravatar-140.png' }) %>
+                <%= gravatar_image_tag(post.user.email, size: 64, alt: post.user.name) %>
                 </figure>
             </div>
             <div class="media-body">
-                    <bold>Sameera Appana</bold><br />
-                    <small>@sameeraappana</small><br/>
+                    <bold><%= post.user.name %> </bold><br />
+                    <small><%= post.user.username %></small><br/>
                     <p><%= post.post %></p>
-            </div>
-        </article>
-    </div>
+                    <% if user_signed_in? && current_user.id == post.user_id %>
+                    <nav class="nav">
+  					<%= link_to post, class: "nav-item" do %>
+  					  <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+            <% end %>
+  					<%= link_to edit_post_path(post), class: "nav-item" do %>
+  					  <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+  					<% end %>
+  					<%= link_to post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } do %>
+  							<span class="icon"><i class="fa fa-trash" aria-hidden="true"></i></span>
+                      <% end %>
+                      </nav>
+                      <% end %>
+                  </div>
+                </article>
+                </div>
 <% end %>
-</div>
-</div>
-</div>
