--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,36 @@
     }
   }
 }
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+.leftpane {
+  width: 25%;
+  height: 100%;
+  float: left;
+  border-collapse: separate;
+}
+
+.middlepane {
+  width: 50%;
+  height: 100%;
+  float: left;
+  border-collapse: separate;
+}
+
+.rightpane {
+  width: 22%;
+  height: 100%;
+  position: relative;
+  float: right;
+  border-collapse: separate;
+}
