--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,16 @@
 <div class="container">
-   <div class="row">
-     <div class="col-sm">
-     <%= render 'feed' %>
-     </div>
-     <div class="col-sm">
-     <%= render 'people-to-follow' %>
-     </div>
-   </div>
- </div>
+  <% if user_signed_in? %>
+  <div class="leftpane">
+  <%= render 'profile' %>
+  </div>
+  <div class="rightpane">
+  <%= render 'people-to-follow' %>
+  </div>
+  <% else %>
+  <div class="rightpane">
+  <p> Join My Twitter now to follow people you know and post your thoughts! </p>
+  </div>
+  <% end %>
+  <div class="middlepane"> <%= render 'feed' %> </div>
+  
+</div>
