--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Post</h1>
-
-<%= render 'form', post: @post %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="col-md-8 col-md-offset-2">
+   <div class="row">
+     <div class="panel panel-default">
+       <div class="panel-heading">
+         <h1>Edit Post</h1>
+       </div>
+       <div class="panel-body">
+       <%= render 'form', post: @post %>
+       </div>
+     </div>
+   </div>
+ </div>
