--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Post</h1>
-
-<%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<div class="col-md-8 col-md-offset-2">
+   <div class="row">
+     <div class="panel panel-default">
+       <div class="panel-heading">
+         <h1>New Post</h1>
+       </div>
+       <div class="panel-body">
+         <%= render 'form' %>
+       </div>
+     </div>
+   </div>
+ </div>
