--- a/app/views/posts/_people-to-follow.html.erb
+++ b/app/views/posts/_people-to-follow.html.erb
@@ -1,20 +1,21 @@
 <p>People You Might Follow</p>
 	
+<% @users.each do | user | %>
+	<% if user.username != current_user.username %>
+	<%= link_to user do %>
 	<div>
 		<article class="media">
-			<div class="media-left">
-				<figure class="image-thumbnail">
-                <%= gravatar_image_tag('junk', :alt => 'Github Default Gravatar', :gravatar => { :default => 'https://assets.github.com/images/gravatars/gravatar-140.png' }) %>
-				</figure>
-			</div>
-			<div class="media-body">
-				<div class="body">
-					<p>
-						<strong>Shashank Appana</strong>
-						<br>
-						<small>@shaspidy03</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
+	<div class="media-left">
+	<figure class="img-thumbnail">
+	<%= gravatar_image_tag(user.email, size: 64, alt: user.name) %>
+	</figure>
+</div>
+<div class="media-body">
+		<bold><%= user.name %> </bold><br />
+		<small><%= user.username %></small><br/>
+</div>
+</article>
+</div>
+<% end %>
+<% end %>
+<% end %>
