--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
   <%= render 'people-to-follow' %>
   </div>
   <% else %>
-  <div class="rightpane">
+  <div class="middlepane">
   <p> Join My Twitter now to follow people you know and post your thoughts! </p>
   </div>
   <% end %>
