few styling changes

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,8 +8,9 @@
   </div>
   <% else %>
   <div class="middlepane">
-  <p> Join My Twitter now to follow people you know and post your thoughts! </p>
+  <h1 class="display-1"> Join My Twitter now to follow people you know and post your thoughts! </h1>
   </div>
+
   <% end %>
   <div class="middlepane"> <%= render 'feed' %> </div>
   
