--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <li> <%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
     </ul>
     <% else %>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-left">
     <li> <%= link_to 'Sign Up', new_user_registration_path%> </li>
     <li> <%= link_to 'Login', new_user_session_path %> </li>
     </ul>
