--- a/app/views/posts/_profile.html.erb
+++ b/app/views/posts/_profile.html.erb
@@ -1,4 +1,4 @@
-<p> Your Profile</p>
+<h4> Your Profile</h4>
         <article class="media">
 		<figure class="media-left">
 			<p class="img-thumbnail">
