--- a/app/views/posts/_people-to-follow.html.erb
+++ b/app/views/posts/_people-to-follow.html.erb
@@ -1,4 +1,4 @@
-<p>People You Might Follow</p>
+<h4>People You Might Follow</h4>
 	
 <% @users.each do | user | %>
 	<% if user.username != current_user.username %>
