--- a/app/views/posts/_people-to-follow.html.erb
+++ b/app/views/posts/_people-to-follow.html.erb
@@ -1,7 +1,29 @@
 <h4>People You Might Follow</h4>
-	
+
 <% @users.each do | user | %>
-	<% if user.username != current_user.username %>
+	<% if user.username != current_user.username && !(current_user.following?(user)) %>
+	<%= link_to user do %>
+	<div>
+		<article class="media">
+	<div class="media-left">
+	<figure class="img-thumbnail">
+	<%= gravatar_image_tag(user.email, size: 64, alt: user.name) %>
+	</figure>
+</div>
+<div class="media-body">
+		<bold><%= user.name %> </bold><br />
+		<small><%= user.username %></small><br/>
+</div>
+</article>
+</div>
+<% end %>
+<% end %>
+<% end %>
+<br>
+<br>
+<h4> People You Follow </h4>
+<% @users.each do | user | %>
+	<% if user.username != current_user.username && current_user.following?(user) %>
 	<%= link_to user do %>
 	<div>
 		<article class="media">
